Fix several exceptions in Graph Editor...
While at it modernize outdated code